[gd_scene load_steps=11 format=3 uid="uid://bno2xbu6glsda"]

[ext_resource type="Script" path="res://assets/play/play.gd" id="1_akjwt"]
[ext_resource type="Texture2D" uid="uid://besvtvlevcor5" path="res://assets/global.png" id="2_ugora"]
[ext_resource type="PackedScene" uid="uid://cr8cp2x8jbkjq" path="res://assets/actors/player/player.tscn" id="3_fcfeu"]
[ext_resource type="PackedScene" uid="uid://b0567k1pou8kn" path="res://assets/props/swing_set/swing_set.tscn" id="4_3bt2r"]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_fb6oc"]
polygon = PackedVector2Array(-1e+09, 0, 1e+09, 0, 1e+09, 256, -1e+09, 256)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_jlghy"]
rough = true
bounce = 1.0
absorbent = true

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_umvcq"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_mqngb"]
radius = 16.0
height = 96.0

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_i62ke"]
rough = true
bounce = 1.0
absorbent = true

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lgvkf"]
size = Vector2(384, 24)

[node name="play" type="Node2D"]
script = ExtResource("1_akjwt")
player_freeze_time = 2.0

[node name="map" type="Node2D" parent="."]

[node name="geometry" type="Node2D" parent="map"]

[node name="light_occluder_2d" type="LightOccluder2D" parent="map/geometry"]
modulate = Color(1, 1, 1, 0)
occluder = SubResource("OccluderPolygon2D_fb6oc")

[node name="ground" type="StaticBody2D" parent="map/geometry"]
physics_material_override = SubResource("PhysicsMaterial_jlghy")

[node name="collision_shape_2d" type="CollisionShape2D" parent="map/geometry/ground"]
shape = SubResource("WorldBoundaryShape2D_umvcq")

[node name="parallax_2d" type="Parallax2D" parent="map/geometry"]
z_index = -1
repeat_size = Vector2(512, 0)
repeat_times = 8

[node name="sprite_2d" type="Sprite2D" parent="map/geometry/parallax_2d"]
texture = ExtResource("2_ugora")
offset = Vector2(0, 24)
region_enabled = true
region_rect = Rect2(0, 368, 512, 80)

[node name="background" type="Parallax2D" parent="map/geometry"]
modulate = Color(1, 1, 1, 0.364706)
scroll_scale = Vector2(0.75, 1)
repeat_size = Vector2(4096, 0)
repeat_times = 4

[node name="sprite_2d" type="Sprite2D" parent="map/geometry/background"]
position = Vector2(714, -250)
scale = Vector2(2, 2)
texture = ExtResource("2_ugora")
region_enabled = true
region_rect = Rect2(592, 64, 176, 256)

[node name="sprite_2d_4" type="Sprite2D" parent="map/geometry/background"]
position = Vector2(3547, -308)
scale = Vector2(2.5, 2.5)
texture = ExtResource("2_ugora")
flip_h = true
region_enabled = true
region_rect = Rect2(592, 64, 176, 256)

[node name="sprite_2d_5" type="Sprite2D" parent="map/geometry/background"]
position = Vector2(3328, -237)
scale = Vector2(1.75, 1.75)
texture = ExtResource("2_ugora")
flip_h = true
region_enabled = true
region_rect = Rect2(592, 64, 176, 256)

[node name="sprite_2d_2" type="Sprite2D" parent="map/geometry/background"]
position = Vector2(1956, -243)
scale = Vector2(2, 2)
texture = ExtResource("2_ugora")
region_enabled = true
region_rect = Rect2(592, 64, 176, 256)

[node name="sprite_2d_3" type="Sprite2D" parent="map/geometry/background"]
position = Vector2(2410, -220)
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_ugora")
flip_h = true
region_enabled = true
region_rect = Rect2(592, 64, 176, 256)

[node name="background_2" type="Parallax2D" parent="map/geometry"]
modulate = Color(1, 1, 1, 0.364706)
scroll_scale = Vector2(0.625, 1)
repeat_size = Vector2(4096, 0)
repeat_times = 4

[node name="sprite_2d_6" type="Sprite2D" parent="map/geometry/background_2"]
position = Vector2(3103, -141)
scale = Vector2(2, 2)
texture = ExtResource("2_ugora")
region_enabled = true
region_rect = Rect2(16, 0, 160, 128)

[node name="sprite_2d_7" type="Sprite2D" parent="map/geometry/background_2"]
position = Vector2(1701, -161)
scale = Vector2(2, 2)
texture = ExtResource("2_ugora")
region_enabled = true
region_rect = Rect2(16, 0, 160, 128)

[node name="sprite_2d_8" type="Sprite2D" parent="map/geometry/background_2"]
position = Vector2(2172, -154)
scale = Vector2(2, 2)
texture = ExtResource("2_ugora")
flip_h = true
region_enabled = true
region_rect = Rect2(16, 0, 160, 128)

[node name="seesaw" type="StaticBody2D" parent="map/geometry"]
position = Vector2(1142, -4)

[node name="collision_shape_2d" type="CollisionShape2D" parent="map/geometry/seesaw"]
position = Vector2(0, -40)
shape = SubResource("CapsuleShape2D_mqngb")

[node name="pin_joint_2d" type="PinJoint2D" parent="map/geometry/seesaw"]
position = Vector2(0, -64)
node_a = NodePath("..")
node_b = NodePath("../plank")
bias = 0.504

[node name="sprite_2d" type="Sprite2D" parent="map/geometry/seesaw"]
scale = Vector2(2, 2)
texture = ExtResource("2_ugora")
offset = Vector2(0, -12)
region_enabled = true
region_rect = Rect2(208, 272, 224, 80)

[node name="plank" type="RigidBody2D" parent="map/geometry/seesaw"]
position = Vector2(0, -64)
rotation = -0.331613
collision_mask = 3
mass = 5.0
physics_material_override = SubResource("PhysicsMaterial_i62ke")
can_sleep = false

[node name="collision_shape_2d" type="CollisionShape2D" parent="map/geometry/seesaw/plank"]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_lgvkf")

[node name="sprite_2d" type="Sprite2D" parent="map/geometry/seesaw/plank"]
scale = Vector2(2, 2)
texture = ExtResource("2_ugora")
offset = Vector2(0, -12)
region_enabled = true
region_rect = Rect2(208, 224, 224, 48)

[node name="player_2" parent="map/geometry/seesaw" instance=ExtResource("3_fcfeu")]
position = Vector2(-146, -67)
rotation = -0.331613
_game_data = null
turn_acceleration = 8.0
acceleration_death = 1024.0

[node name="swing_set" parent="map" instance=ExtResource("4_3bt2r")]

[node name="camera_2d" type="Camera2D" parent="map"]
position = Vector2(167, -167)
zoom = Vector2(0.5, 0.5)
process_callback = 0
limit_bottom = 128
position_smoothing_enabled = true
position_smoothing_speed = 32.0
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="player" parent="map" instance=ExtResource("3_fcfeu")]
mass = 20.0
_game_data = null
player = true
turn_acceleration = 8.0
acceleration_death = 1536.0
drag_density = 24.0

[node name="gui" type="CanvasLayer" parent="."]

[node name="info" type="Label" parent="gui"]
offset_right = 116.0
offset_bottom = 45.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32

[node name="controls" type="VBoxContainer" parent="gui"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0

[node name="label_thrust" type="Label" parent="gui/controls"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Thrust Power
"

[node name="slider_thrust" type="HSlider" parent="gui/controls"]
layout_mode = 2
max_value = 10000.0
value = 256.0

[node name="results_overlay" type="ColorRect" parent="gui"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.796652, 0.766556, 0.77416, 0.670588)

[node name="results_container" type="Control" parent="gui"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="panel" type="Panel" parent="gui/results_container"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.125
anchor_top = 0.1
anchor_right = 0.875
anchor_bottom = 0.9

[node name="top" type="Panel" parent="gui/results_container/panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.125
anchor_top = 0.05
anchor_right = 0.875
anchor_bottom = 0.15
grow_horizontal = 2

[node name="title" type="Label" parent="gui/results_container/panel/top"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
text = "The resuLts are in!"
horizontal_alignment = 1

[node name="content" type="Panel" parent="gui/results_container/panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.125
anchor_top = 0.2
anchor_right = 0.875
anchor_bottom = 0.8
grow_horizontal = 2

[node name="stats_left" type="Label" parent="gui/results_container/panel/content"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.8
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
theme_override_constants/line_spacing = 16
theme_override_font_sizes/font_size = 24
text = "Distance
Altitude
Velocity
Injuries
Insurance"

[node name="stats_middle" type="Label" parent="gui/results_container/panel/content"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.8
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
theme_override_constants/line_spacing = 16
theme_override_font_sizes/font_size = 24
text = "0 meters
0 meters
0 meters/sec
Nothing Hurts
"
horizontal_alignment = 1

[node name="stats_right" type="Label" parent="gui/results_container/panel/content"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.8
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
theme_override_constants/line_spacing = 16
theme_override_font_sizes/font_size = 24
text = "+$0.00
+$0.00
+$0.00
-$0.00
+$0.00"
horizontal_alignment = 2

[node name="panel" type="Panel" parent="gui/results_container/panel/content"]
modulate = Color(1, 1, 0.760784, 1)
layout_mode = 1
anchors_preset = -1
anchor_top = 0.8
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="total_left" type="Label" parent="gui/results_container/panel/content/panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_right = -8.0
grow_horizontal = 2
theme_override_constants/line_spacing = 16
theme_override_font_sizes/font_size = 24
text = "Total Earned"
vertical_alignment = 1

[node name="total_right" type="Label" parent="gui/results_container/panel/content/panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_right = -8.0
grow_horizontal = 2
theme_override_constants/line_spacing = 16
theme_override_font_sizes/font_size = 24
text = "$0.00"
horizontal_alignment = 2
vertical_alignment = 1

[node name="continue" type="Button" parent="gui/results_container/panel"]
modulate = Color(0.807843, 1, 0.729412, 1)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.825
anchor_right = 0.8
anchor_bottom = 0.976
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "Continue to the Shop"
